[project]
name = "builder-agent-dataset"
version = "0.1.0"
description = "Neo4j graph export to CSV with importer model generation"
requires-python = ">=3.13"
dependencies = [
    "neo4j-rust-ext>=6.1.0.0",
]

[project.scripts]
neo4j-export = "neo4j_export:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]
